Finish the section with park-related cards & fix the issue related to the alignment of the button-like links inside those cards

--- a/src/scss/components/_parks.scss
+++ b/src/scss/components/_parks.scss
@@ -10,8 +10,7 @@
   }
 
   &__card {
-    display: flex;
-    flex-direction: column;
+    position: relative;
     border: 2px solid colors.$darkgray;
 
     &-title {
@@ -47,6 +46,7 @@
       }
 
       &-description {
+        margin-bottom: 4.5em;
         font-size: 1.5rem;
         line-height: 1.4;
 
@@ -57,6 +57,11 @@
     }
 
     &-link-box {
+      width: 100%;
+      position: absolute;
+      left: 50%;
+      transform: translateX(-50%);
+      bottom: 0;
       text-align: center;
     }
 
